Fixed open seats counter, completed special view code (opening related data views), wrapped search updates

--- a/app/css/theme.css
+++ b/app/css/theme.css
@@ -1136,3 +1136,12 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder, input::-webkit-inpu
 .text-lg {
     font-size: 16px;
 }
+
+.items.disabled {
+    border:none;
+    font-weight: 800;
+}
+
+.disabled .remove {
+    display: none!important;
+}
